--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,75 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/variabel.css" />
+    <link rel="stylesheet" href="./css/stylesheet.css" />
+    <title>Product</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <h1>TimberLand</h1>
+    </nav>
+    <main>
+      <section class="section__product">
+        <div class="product__girdbox">
+          <div class="product__one-box">
+            <img
+              src="./assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot.avif"
+              alt=""
+            />
+          </div>
+          <div class="product__two-box">
+            <img
+              src="/src/assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (1).avif"
+              alt=""
+            />
+          </div>
+          <div class="product__three-box">
+            <img
+              src="./assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (3).avif"
+              alt=""
+            />
+          </div>
+          <div class="product__four-box">
+            <img
+              src="./assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (2).avif"
+              alt=""
+            />
+          </div>
+        </div>
+        <!-- --------------------- -->
+        <div class="product__info-box">
+          <div class="product__info-title">
+            <h1>Men's Timberland® Premium 6-Inch Waterproof Boot</h1>
+          </div>
+          <div class="product__info-sizeing">
+            <p>
+              we're sorry but this proudct only szie right now is 42 EU/8.5
+              USA/8 UK, and is autmaticl slected when going to CheckOut
+            </p>
+          </div>
+          <div class="product__info-price">
+            <h2>Price 200.99$</h2>
+          </div>
+          <div class="product__info-button">
+            <a href="./check_out_form.html">CheckOut</a>
+          </div>
+          <div class="product__info-matrial">
+            <dl>
+              <dt>Matrial</dt>
+              <dd>- Overmateriale: Nubuck</dd>
+              <dd>
+                - Innermateriale: Fôret i en kombinasjon av lær og tekstil
+              </dd>
+              <dd>- Dekksåle: Lær</dd>
+              <dd>- Såle: Syntentisk materiale</dd>
+              <dd>- Fôr: Varmt fôret</dd>
+              <dd>- Vedlikeholdsråd: Vennligst impregner før bruk</dd>
+            </dl>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
