added all product details

--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
           </div>
           <div class="product__info-sizeing">
             <p>
-              we're sorry but this proudct only szie right now is 42 EU/8.5
-              USA/8 UK, and is autmaticl slected when going to CheckOut
+              *we're sorry but this proudct only szie right now is 42 EU/8.5
+              USA/8 UK, and is autmaticl slected when going to CheckOut*
             </p>
           </div>
           <div class="product__info-price">
@@ -57,6 +57,7 @@
           <div class="product__info-button">
             <a href="./check_out_form.html">CheckOut</a>
           </div>
+          <!-- Product List -->
           <div class="product__info-matrial">
             <dl>
               <dt>Matrial</dt>
@@ -68,6 +69,18 @@
               <dd>- Såle: Syntentisk materiale</dd>
               <dd>- Fôr: Varmt fôret</dd>
               <dd>- Vedlikeholdsråd: Vennligst impregner før bruk</dd>
+            </dl>
+          </div>
+          <div class="product__info-product--details">
+            <dl>
+              <dt>produktdetalijer</dt>
+              <dd>- Vær: Snø</dd>
+              <dd>- Skotupp: Rund</dd>
+              <dd>- Hælform: Blokkhæl</dd>
+              <dd>- Lukking: Snøring</dd>
+              <dd>- Mønster: Ensfarget</dd>
+              <dd>- Detaljer: Ekstra par skolisser</dd>
+              <dd>- Funksjon: Vanntett</dd>
             </dl>
           </div>
         </div>
