--- a/src/index.html
+++ b/src/index.html
@@ -18,25 +18,25 @@
           <div class="product__one-box">
             <img
               src="./assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot.avif"
-              alt=""
+              alt="side view of the shoe"
             />
           </div>
           <div class="product__two-box">
             <img
               src="/src/assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (1).avif"
-              alt=""
+              alt="front view a bit tilted of the shoe "
             />
           </div>
           <div class="product__three-box">
             <img
               src="./assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (3).avif"
-              alt=""
+              alt="under view of the shoe"
             />
           </div>
           <div class="product__four-box">
             <img
               src="./assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (2).avif"
-              alt=""
+              alt="top view of the shoe"
             />
           </div>
         </div>
@@ -45,22 +45,23 @@
           <div class="product__info-title">
             <h1>Men's Timberland® Premium 6-Inch Waterproof Boot</h1>
           </div>
-          <div class="product__info-sizeing">
-            <p>
-              *we're sorry but this proudct only szie right now is 42 EU/8.5
-              USA/8 UK, and is autmaticl slected when going to CheckOut*
-            </p>
-          </div>
           <div class="product__info-price">
             <h2>Price 200.99$</h2>
           </div>
           <div class="product__info-button">
             <a href="./check_out_form.html">CheckOut</a>
           </div>
+          <div class="product__info-sizeing">
+            <p>
+              *we're sorry but this proudct only szie right now is 42 EU/8.5
+              USA/8 UK, and is autmaticl slected when going to CheckOut*
+            </p>
+          </div>
           <!-- Product List -->
           <div class="product__info-matrial">
             <dl>
               <dt>Matrial</dt>
+              <dd>- Farge: Wheat Nubuck</dd>
               <dd>- Overmateriale: Nubuck</dd>
               <dd>
                 - Innermateriale: Fôret i en kombinasjon av lær og tekstil
@@ -86,5 +87,8 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div>© 2024 website Desgined by Philip Nystrøm. |</div>
+    </footer>
   </body>
 </html>
