--- a/src/check_out_form.html
+++ b/src/check_out_form.html
@@ -3,7 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/variabel.css" />
+    <link rel="stylesheet" href="/src/css/stylesheet.css" />
+    <title>CheckOut</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <h1>TimberLand</h1>
+    </nav>
+    <main>
+      <form>
+        <fieldset>
+          <legend>Check Out Information</legend>
+          <label for="fullname">Fullname</label><br />
+          <input type="text" required placeholder="Full Name" /><br />
+
+          <label for="phone-number">Phone Number</label><br />
+          <input type="tel" required placeholder="Phone Number" /><br />
+
+          <label for="address">Address</label><br />
+          <input type="city" required placeholder="Address" /><br />
+
+          <label for="email">Email</label><br />
+          <input type="email" /><br />
+
+          <label for="payment">Payment method</label><br />
+          <select name="" id="">
+            <option value="visa">Visa</option>
+            <option value="credit">Credit Card</option>
+            <option value="vipps">Vipps</option>
+            <option value="paypal">Paypal</option></select
+          ><br />
+          <input type="tel" /><br /><br />
+          <input type="submit" />
+        </fieldset>
+      </form>
+    </main>
+  </body>
 </html>
