--- a/src/index.html
+++ b/src/index.html
@@ -54,41 +54,38 @@
           <div class="product__info-sizeing">
             <p>
               *we're sorry but this proudct only szie right now is 42 EU/8.5
-              USA/8 UK, and is autmaticl slected when going to CheckOut*
+              USA/8 UK, and is automatic selected when going to CheckOut*
             </p>
           </div>
           <!-- Product List -->
           <div class="product__info-matrial">
             <dl>
-              <dt>Matrial</dt>
-              <dd>- Farge: Wheat Nubuck</dd>
-              <dd>- Overmateriale: Nubuck</dd>
-              <dd>
-                - Innermateriale: Fôret i en kombinasjon av lær og tekstil
-              </dd>
-              <dd>- Dekksåle: Lær</dd>
-              <dd>- Såle: Syntentisk materiale</dd>
-              <dd>- Fôr: Varmt fôret</dd>
+              <dt>Material</dt>
+              <dd>- Color: Wheat Nubuck</dd>
+              <dd>- Upper material: Nubuck</dd>
+              <dd>- Inner material: combination of leather and textile</dd>
+              <dd>- Tire sole: leather</dd>
+              <dd>- Sole: Synthetic material</dd>
               <dd>- Vedlikeholdsråd: Vennligst impregner før bruk</dd>
             </dl>
           </div>
           <div class="product__info-product--details">
             <dl>
-              <dt>produktdetalijer</dt>
-              <dd>- Vær: Snø</dd>
-              <dd>- Skotupp: Rund</dd>
-              <dd>- Hælform: Blokkhæl</dd>
-              <dd>- Lukking: Snøring</dd>
-              <dd>- Mønster: Ensfarget</dd>
-              <dd>- Detaljer: Ekstra par skolisser</dd>
-              <dd>- Funksjon: Vanntett</dd>
+              <dt>Product Details</dt>
+              <dd>- "eather: Snow</dd>
+              <dd>- Shoe top: Round</dd>
+              <dd>- Heel shape: Block heel</dd>
+              <dd>- Closure: Lacing</dd>
+              <dd>- Pattern: Monochrome</dd>
+              <dd>- Details: Extra pair of shoelaces</dd>
+              <dd>- Function: Waterproof</dd>
             </dl>
           </div>
         </div>
       </section>
     </main>
     <footer>
-      <div>© 2024 website Desgined by Philip Nystrøm. |</div>
+      <div><p>© 2024 website Desgined by Philip Nystrøm.</p></div>
     </footer>
   </body>
 </html>
