--- a/src/check_out_form.html
+++ b/src/check_out_form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/variabel.css" />
-    <link rel="stylesheet" href="/src/css/stylesheet.css" />
+    <link rel="stylesheet" href="./css/stylesheet.css" />
     <title>CheckOut</title>
   </head>
   <body>
@@ -13,32 +13,37 @@
       <h1>TimberLand</h1>
     </nav>
     <main>
-      <form>
-        <fieldset>
-          <legend>Check Out Information</legend>
-          <label for="fullname">Fullname</label><br />
-          <input type="text" required placeholder="Full Name" /><br />
+      <form class="form__checkout">
+        <fieldset class="fieldset">
+          <legend>Shipping Info</legend>
+          <div class="form__checkout--inputs">
+            <label for="fullname">Full Name*</label>
+            <input type="text" required placeholder="Youre Name" />
 
-          <label for="phone-number">Phone Number</label><br />
-          <input type="tel" required placeholder="Phone Number" /><br />
+            <label for="emai">Email Address*</label>
+            <input type="email" required placeholder="example@example.com" />
 
-          <label for="address">Address</label><br />
-          <input type="city" required placeholder="Address" /><br />
+            <label for="phone">Phone Number*</label>
+            <input type="tel" required />
 
-          <label for="email">Email</label><br />
-          <input type="email" /><br />
+            <label for="addres">Address*</label>
+            <input type="text" required />
 
-          <label for="payment">Payment method</label><br />
-          <select name="" id="">
-            <option value="visa">Visa</option>
-            <option value="credit">Credit Card</option>
-            <option value="vipps">Vipps</option>
-            <option value="paypal">Paypal</option></select
-          ><br />
-          <input type="tel" /><br /><br />
-          <input type="submit" />
+            <label for="payment">Payment methods*</label>
+            <select>
+              <option value="visa">Visa</option>
+              <option value="credit">Credit</option>
+            </select>
+            <input type="tel" required placeholder="Card Number" />
+            <input type="submit" />
+          </div>
         </fieldset>
       </form>
+
+      <!-- back to product page -->
+      <div class="product__form-button--main">
+        <a href="./index.html">Back To Product</a>
+      </div>
     </main>
   </body>
 </html>
