test for deploy

--- a/check_out_form.html
+++ b/check_out_form.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/variabel.css" />
-    <link rel="stylesheet" href="./css/stylesheet.css" />
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/variabel.css" />
+    <link rel="stylesheet" href="./src/css/stylesheet.css" />
     <title>CheckOut</title>
   </head>
   <body>
