--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/variabel.css" />
-    <link rel="stylesheet" href="./css/stylesheet.css" />
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/variabel.css" />
+    <link rel="stylesheet" href="./src/css/stylesheet.css" />
     <title>Product</title>
   </head>
   <body>
@@ -17,25 +17,25 @@
         <div class="product__girdbox">
           <div class="product__one-box">
             <img
-              src="./assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot.avif"
+              src="./src/assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (1).avif"
               alt="side view of the shoe"
             />
           </div>
           <div class="product__two-box">
             <img
-              src="/src/assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (1).avif"
+              src="/src/assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot.avif"
               alt="front view a bit tilted of the shoe "
             />
           </div>
           <div class="product__three-box">
             <img
-              src="./assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (3).avif"
+              src="./src/assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (3).avif"
               alt="under view of the shoe"
             />
           </div>
           <div class="product__four-box">
             <img
-              src="./assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (2).avif"
+              src="./src/assets/img/Mens-Timberland-Premium-6Inch-LaceUp-Waterproof-Boot (2).avif"
               alt="top view of the shoe"
             />
           </div>
